övningen är klar

--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 
     <div class="diary-container">
         <h2>DAGBOK</h2>
+        <label for="">Date:</label>
         <input class="date" type="date">
+        <label for="">Title:</label>
         <input class="rubrik" type="text">
-        <input class="text" type="text">
+        <label for="">Entry:</label>
+        <textarea cols="50" rows="20"></textarea>
         <button>Spara denna dag</button>
     </div>
+
+    <div class="entries-container"></div>
 
 </body>
 </html>
